kubernetes/staging/legacy-crm/cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-crm-cron-deployment
spec:
  selector:
    matchLabels:
      app: legacy-crm-cron
  replicas: 1
  template:
    metadata:
      labels:
        app: legacy-crm-cron
    spec:
      containers:
        - name: legacy-crm-cron
          image: 689072714931.dkr.ecr.eu-west-1.amazonaws.com/crm-cron-repository:staging
          imagePullPolicy: Always
