kubernetes/staging/legacy-crm/legacy-crm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-crm-deployment
spec:
  selector:
    matchLabels:
      app: legacy-crm
  replicas: 1
  template:
    metadata:
      labels:
        app: legacy-crm
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: legacy-crm
          image: 689072714931.dkr.ecr.eu-west-1.amazonaws.com/crm-core-repository:1.15.5-patch10
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add: [ "SYS_PTRACE" ]
          lifecycle:
            preStop:
              exec:
                command:
                  - bash
                  - '-c'
                  - stop.sh 
          readinessProbe:
            httpGet:
              path: /health.php
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
          - name: crm-files
            mountPath: /var/www/html/files
          - name: js-files
            mountPath: /var/www/html/jobstep_pp/files
          - name: php-sessions
            mountPath: /php-sessions
      volumes:
      - name: js-files
        persistentVolumeClaim:
          claimName: js-files-claim
      - name: crm-files
        persistentVolumeClaim:
          claimName: crm-files-claim
      - name: php-sessions
        persistentVolumeClaim:
          claimName: php-sessions-claim
---
apiVersion: v1
kind: Service
metadata:
  name: legacy-crm-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health.php
spec:
  selector:
    app: legacy-crm
  ports:
    - port: 80
      targetPort: 80
